--- a/content/blog/2021-07-26 NHL Standings/NHLStandings.Rmd
+++ b/content/blog/2021-07-26 NHL Standings/NHLStandings.Rmd
@@ -336,7 +336,7 @@ To actually analyze which of these systems is the best, I first organize the dat
 
 ![Cumulative Error by Points System (2006 - 2021)](/images/StandingsP1.png)
 
-This is called a violin plot because the shape of the simulated distribution for each group of data often resembles a violin. I use these plots to show the data and their approximated distributions rather than just the mean. I think this is helpful in making conclusions about what we’re actually seeing, because we can see the way the data overlap, rather than just comparing the mean. An important consideration: these plots generally obscure differences by making them look smaller than they are. If I plotted only the mean of each group (or a bar chart of some description), there’d be no need to be as ‘zoomed out’ as we are here, and the differences would look larger. Reminder, lower error is better. It can clearly be seen that the two systems that include ties (EPL and pre-lockout NHL) have the highest mean cumulative error. So, no ties please. The next-worst-performing system is the current one. This is mildly encouraging; at least the current system is an upgrade over the previous one. But let’s focus now on the two systems that would be an upgrade on the one we currently have. The IIHF points system is *just barely* an upgrade over the current system. This was surprising, as I have been on record saying I preferred a switch to thee IIHF system. Perhaps even more surprising: the standard Big-4 system outperforms any other, by almost any metric you could glean from the graph. It has the lowest maximum cumulative error; the lowest (actually the two lowest) minimum cumulative errors; and it also has the lowest mean cumulative error. Not only this, but the Big-4 system also has no specific regard for goal difference. Rather, it is simply perfectly correlated with wins. This means that the entire error present for this system is *strictly* with respect to goal difference. From this, we can infer two things: first, the more heavily you weigh wins over goal difference (which as I said earlier you can reasonably do), the more this system will outperform the others. This is because the error with respect to wins is zero. Second, we can infer that wins and goal differential are naturally correlated to a substantial enough degree that any system perfectly in line with one of them (wins) is not punished to a large degree with respect to the other (goal differential). 
+This is called a violin plot because the shape of the simulated distribution for each group of data often resembles a violin. I use these plots to show the data and their approximated distributions rather than just the mean. I think this is helpful in making conclusions about what we’re actually seeing, because we can see the way the data overlap, rather than just comparing the mean. An important consideration: these plots generally obscure differences by making them look smaller than they are. If I plotted only the mean of each group (or a bar chart of some description), there’d be no need to be as ‘zoomed out’ as we are here, and the differences would look larger. Reminder, lower error is better. It can clearly be seen that the two systems that include ties (EPL and pre-lockout NHL) have the highest mean cumulative error. So, no ties please. The next-worst-performing system is the current one. This is mildly encouraging; at least the current system is an upgrade over the previous one. But let’s focus now on the two systems that would be an upgrade on the one we currently have. The IIHF points system is *just barely* an upgrade over the current system. This was surprising, as I have been on record saying I preferred a switch to the IIHF system. Perhaps even more surprising: the standard Big-4 system outperforms any other, by almost any metric you could glean from the graph. It has the lowest maximum cumulative error; the lowest (actually the two lowest) minimum cumulative errors; and it also has the lowest mean cumulative error. Not only this, but the Big-4 system also has no specific regard for goal difference. Rather, it is perfectly correlated with wins. This means that the entire error present for this system is *strictly* with respect to goal difference. From this, we can infer two things: first, the more heavily you weigh wins over goal difference (which as I said earlier you can reasonably do), the more this system will outperform the others. This is because the error with respect to wins is zero, and as the weight for the wins-related error increases, the cumulative error will appraoch zero. Second, we can infer that wins and goal differential are naturally correlated to a substantial enough degree that any system perfectly in line with one of them (wins) is not punished to a large degree with respect to the other (goal differential). 
 
 
 So in summary, I’ve had to walk back my preference for the IIHF system, as it is consistently outperformed by the standard big-4 system of just wins and losses. Taking a look at how the standings would have looked this past season with a purely wins-based points system (where I’ve set wins as worth two points to maintain consistency with the point range of a normal NHL season):
